typescript/checker/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName6.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            27,
        ),
        hi: BytePos(
            28,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName6.ts:2:12
  |
2 | var v = { [e]: 1, [e + e]: 2 };
  |            ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            35,
        ),
        hi: BytePos(
            36,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName6.ts:2:20
  |
2 | var v = { [e]: 1, [e + e]: 2 };
  |                    ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            39,
        ),
        hi: BytePos(
            40,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName6.ts:2:24
  |
2 | var v = { [e]: 1, [e + e]: 2 };
  |                        ^

